--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/content": "^1.15.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "tailwindcss": "^3.1.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
